--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,7 @@ h3 {
     align-items: center;
     max-width: 80rem;
     margin: 0 auto;
+    padding: 2rem;
 }
 
 
@@ -134,5 +135,6 @@ h3 {
 
 .choice-text {
     padding: 1.5rem;
+    width: 100%;
 }
 
