--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,4 +137,28 @@ h3 {
     padding: 1.5rem;
     width: 100%;
 }
+.correct {
+    background-color: #28a745;
+}
 
+.incorrect {
+    background-color: #dc3545;
+}
+
+/*----- Question and Score Hud  ----- */
+
+
+#hud {
+    display: flex;
+    justify-content: space-between;
+}
+
+.hud-prefix {
+    text-align: center;
+    font-size: 2rem;
+}
+
+
+.hud-main-text {
+    text-align: center;
+}
