--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    color: #333;
+    color: #CCC5B9;
 }
 
 h1,
@@ -116,20 +116,20 @@ h3 {
     margin-bottom: 0.5rem;
     width: 100%;
     font-size: 1.8rem;
-    border: 0.1rem solid rgba(86, 185, 235, 0.25);
-    background-color: white;
+    border: 0.1rem solid #eb5f2886;
+    background-color: #ccc5b967;
 }
 
 .choice-container:hover {
     cursor: pointer;
-    box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5); 
+    box-shadow: 0 0.4rem 1.4rem 0 #eb5f2886; 
     transform: translateY(-0.1rem);
     transition: transform 150ms;
 }
 
 .choice-prefix {
     padding: 1.5rem 2.5rem;
-    background-color: #56a5eb;
+    background-color: #EB5E28;
     color: white;
 }
 
@@ -137,6 +137,11 @@ h3 {
     padding: 1.5rem;
     width: 100%;
 }
+
+p.choice-text {
+    color: #FFFCF2;
+}
+
 .correct {
     background-color: #28a745;
 }
@@ -166,13 +171,14 @@ h3 {
 #progressBar {
     width: 20rem;
     height: 4rem;
-    border: 0.3rem solid #56a5eb;
+    border: 0.3rem solid #EB5E28;
+    background-color: #ccc5b967;
     margin-top: 1.5rem;
 }
 
 #progressBarFull {
-    height: 3.4rem;
-    background-color: #56a5eb;
+    height: 3.6rem;
+    background-color: #EB5E28;
     width: 0%;
 }
 
@@ -191,6 +197,7 @@ input {
     font-size: 1.8rem;
     border: none;
     box-shadow: 0 0.1rem 1.4rem rgba(86, 185, 235, 0.5);
+    color: #252422;
 }
 
 input ::placeholder {
@@ -219,7 +226,7 @@ input ::placeholder {
 #loader {
     border: 1.6rem solid white;
     border-radius: 50%;
-    border-top: 1.6rem solid #56a5eb;
+    border-top: 1.6rem solid #EB5E28;
     width: 12rem;
     height: 12rem;
     animation: spin 2s linear infinite;
