Added to readme and added to html files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,3 +247,13 @@ input ::placeholder {
         transform: rotate(360deg);
     }
 }
+
+/*----- Footer ----- */
+.info-footer {
+    display: flex;
+    position: absolute;
+    margin-top: 90vh;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
