--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,4 +264,5 @@ input ::placeholder {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    font-size: 1.2rem;
 }
