--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,3 +266,9 @@ input ::placeholder {
     align-items: center;
     font-size: 1.2rem;
 }
+
+@media only screen and (max-width: 600px) {
+    h2#question {
+        font-size: 2.5rem;
+    }
+  }
